force-app/main/default/objects/Table_Virtual_Setting__mdt/Table_Virtual_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Table Virtual Setting</label>
    <pluralLabel>Table Virtual Settings</pluralLabel>
</CustomObject>