force-app/main/default/objects/Table_Virtual_Setting__mdt/fields/Cache_Window_Size__c.field-meta.xml
<CustomField>
    <fullName>Cache_Window_Size__c</fullName>
    <description>Maximum number of chunks to keep in memory at one time.</description>
    <label>Cache Window Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>