force-app/main/default/objects/Table_Virtual_Setting__mdt/fields/Chunk_Size__c.field-meta.xml
<CustomField>
    <fullName>Chunk_Size__c</fullName>
    <description>Number of records per chunk in Virtual Browse Mode.</description>
    <label>Chunk Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>