force-app/main/default/objects/Table_Virtual_Setting__mdt/fields/Matrix_Max_Summary_Fields__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Max_Summary_Fields__c</fullName>
    <description>Maximum number of Matrix summary fields allowed in an interactive or exported Matrix configuration.</description>
    <label>Matrix Max Summary Fields</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>