force-app/main/default/objects/Table_Virtual_Setting__mdt/fields/Matrix_Preview_Row_Limit__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Preview_Row_Limit__c</fullName>
    <description>Maximum number of grouped Matrix rows rendered interactively in the browser. Matrix exports continue to use the full filtered data set.</description>
    <label>Matrix Preview Row Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>