force-app/main/default/objects/Table_Virtual_Setting__mdt/fields/Prefetch_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Prefetch_Threshold__c</fullName>
    <description>Scroll buffer threshold before fetching the next chunk.</description>
    <label>Prefetch Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>