force-app/main/default/objects/Table_Virtual_Setting__mdt/fields/Virtual_Mode_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Mode_Threshold__c</fullName>
    <description>Number of records above which the table automatically switches to Virtual Browse Mode.</description>
    <label>Virtual Mode Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>